# apl_raffles

./: Anchor.toml  raffles.json
apl-raffles-client/: programId.ts
apl-raffles-client/accounts/: Entrants.ts  Raffle.ts  index.ts
apl-raffles-client/errors/: custom.ts
apl-raffles-client/instructions/: addPrize.ts  buyTickets.ts  claimPrize.ts  closeEntrants.ts  collectProceeds.ts  createRaffle.ts  index.ts  revealWinners.ts
programs/apl_raffles/: Cargo.toml
programs/apl_raffles/src/: error.rs  lib.rs  recent_blockhashes.rs
programs/apl_raffles/src/instructions/: add_prize.rs  buy_tickets.rs  claim_prize.rs  close_entrants.rs  collect_proceeds.rs  create_raffle.rs  mod.rs  reveal_winners.rs
programs/apl_raffles/src/state/: entrants.rs  mod.rs  raffle.rs
tests/: apl_raffles.ts
